--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -9,5 +9,23 @@
         android:id="@+id/homeFragment"
         android:name="com.example.native42.HomeFragment"
         android:label="home_fragment"
-        tools:layout="@layout/home_fragment" />
+        tools:layout="@layout/home_fragment">
+        <action
+            android:id="@+id/action_homeFragment_to_messageDialog"
+            app:destination="@id/messageDialog" />
+    </fragment>
+    <dialog
+        android:id="@+id/messageDialog"
+        android:name="com.example.native42.MessageDialog"
+        android:label="MessageDialog">
+        <argument
+            android:name="titleId"
+            app:argType="integer" />
+        <argument
+            android:name="messageId"
+            app:argType="integer" />
+        <argument
+            android:name="messageArgs"
+            app:argType="string[]" />
+    </dialog>
 </navigation>
